<resources>
    <string name="app_name">Croaker</string>

    <string name="menu_feed">Feed</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_profile">Profile</string>

    <string name="search_hint">Search Croaker</string>
    <string name="results_hint">Enter a keyword</string>
    <string name="results_text">Results:</string>

    <string name="no_bookmarks_text">You haven\'t added any Croaks to your Bookmarks yet</string>
    <string name="bookmarks_showing_text_hint">When you do, they\'ll show up here.</string>

    <string name="edit_button">Edit profile</string>

    <string name="post_adding_title">Croak</string>
    <string name="profile_editing_title">Edit profile</string>

    <string name="delete">Delete</string>
    <string name="confirmation_message">Are you sure you want to delete this post?</string>

    <string name="croak_button">Croak</string>
    <string name="post_text_editor_hint">What\'s happening?</string>
    <string name="add_picture_button">Add picture</string>
    <string name="delete_picture_button">Delete picture</string>
    <string name="not_picked_message">You haven\'t picked image</string>
    <string name="fail_message">Something went wrong</string>

    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="username_text">Username</string>
    <string name="username_hint">Username cannot be blank</string>
    <string name="bio_text">Bio</string>
    <string name="bio_hint">Tell something about you</string>

</resources>
