<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_editing_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/greenThemePrimary"
                android:text="@string/back_button"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/greenThemePrimary"
                android:text="@string/save_button"
                android:textColor="@color/white" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/avatar_preview"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_pick_avatar" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/username_text" />

        <EditText
            android:id="@+id/username_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textPersonName|textCapSentences"
            android:maxLength="20" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bio_text" />

        <EditText
            android:id="@+id/bio_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/bio_hint"
            android:maxLength="150"
            android:minLines="3" />
    </LinearLayout>

</ScrollView>